--- a/css/style.css
+++ b/css/style.css
@@ -234,8 +234,15 @@ h1, h2, h3 {
     margin-bottom: 2rem;
     color: var(--primario);
 }
+@media (min-width: 768px) {
+    .contenedor-campos {
+        display: grid;
+        grid-template-columns: repeat(2, 1fr);
+        grid-template-rows: auto auto 20rem;
+        column-gap: 1rem;
+    }       
+}
 
-.contenedor-campos {}
 
 .campo {
     margin-bottom: 1rem;
@@ -265,3 +272,4 @@ FORMA DE SELECCIONAR VARIOS INPUT O SOLO UNO
     padding: 1.5rem;
     border-radius: .5rem;
 }
+
