--- a/css/style.css
+++ b/css/style.css
@@ -231,6 +231,7 @@ h1, h2, h3 {
     text-align: center;
     font-size: 1.8rem;
     text-transform: uppercase;
+    font-weight: 700;
     margin-bottom: 2rem;
     color: var(--primario);
 }
@@ -238,8 +239,13 @@ h1, h2, h3 {
     .contenedor-campos {
         display: grid;
         grid-template-columns: repeat(2, 1fr);
-        grid-template-rows: auto auto 20rem;
+        grid-template-rows: auto auto 25rem;
         column-gap: 1rem;
+    }
+    .campo:nth-child(3),
+    .campo:nth-child(4){
+        grid-column: 1 / 3;/*posicionar en las columanas*/
+        /*grid-row: 3 / 4; posicionar en las filas*/
     }       
 }
 
